--- a/pkg/ui/templates/card_secret_decrypted.gohtml
+++ b/pkg/ui/templates/card_secret_decrypted.gohtml
@@ -4,7 +4,8 @@
         <header><h4>Your secure message is shown below.</h4></header>
         <div style="display: flex; flex-direction: column; grid-gap: 1rem;">
             <textarea name="secret" id="secret" aria-label="Secret" readonly style="resize: none;" rows="4">{{.Secret}}</textarea>
-            <button data-signals-on="navigator.clipboard.writeText('{{.Secret}}')" class="secondary"
+            <button data-on-click="navigator.clipboard.writeText('{{.Secret}}')"
+                    class="secondary"
                     style="margin-left: auto;">
                 Copy to clipboard
                 <span class="margin-left: 0.5rem;">
