--- a/pkg/ui/templates/card_secret_form.gohtml
+++ b/pkg/ui/templates/card_secret_form.gohtml
@@ -1,78 +1,82 @@
-{{- /*gotype: github.com/pudottapommin/secret-notes/pkg/ui.PageIndex*/ -}}
-{{define "page_index.html"}}
-    {{template "layout.html" .}}
-{{end}}
+{{define "card_secret_form.html"}}
+    <article id="secret-form"
+             data-signals="{
+             _maxViews: 1,
+             _expiration: 3600,
+             _submit(el, direct) {
+                if(!direct && document.activeElement.tagName === 'TEXTAREA') return
+                @put('/')
+             }}"
+             data-on-keydown="evt.key === 'Enter' && $_submit(el, false)"
+    >
+        <header><h1>Keep your sensitive data out of prying 👀</h1></header>
+        <div data-computed-_has-errors="!!$errorValue || $value.length === 0"
+             data-computed-max-views="parseInt($_maxViews)"
+             data-computed-expiration="parseInt($_expiration)">
+            <div>
+                {{/*                <label for="value">Secret</label>*/}}
+                <textarea data-bind-value name="value" id="value" required
+                          aria-label="Secret"
+                          placeholder="Fill in secret which you would like to share 🤫"
+                          data-attr-aria-invalid="!!$errorValue ? 'true' : ($value.length > 0 ? 'false' : false)"
+                          aria-describedby="value_invalid_helper"
+                          style="min-height: 10rem;max-height: 24rem;"
+                ></textarea>
+                <small id="value_invalid_helper" data-show="!!$errorValue" data-text="$errorValue"
+                       style="display: none;"></small>
+            </div>
 
-{{define "content"}}
-    {{if .IsAuthenticated}}
-        {{template "card_secret_form.html" .}}
-    {{else}}
-        <article id="login-form"
-                 data-signals="{
-             _submit() {
-                @post('/authenticate')
-             }
-}"
-                 data-on-keydown="evt.key === 'Enter' && $_submit()"
-        >
-            <header><h1>You need to log in :)</h1></header>
-            <div style="display:grid; gap: 1rem;">
-                <div>
-                    <label for="username">Username</label>
-                    <input data-bind-username
-                           data-attr-aria-invalid="!!$errorUsername ? 'true' : ($username.length > 0 ? 'false' : false)"
-                           aria-describedby="username_invalid_helper"
-                           type="text"
-                           name="username"
-                           id="username"
-                           autocomplete="username"
-                           placeholder="your username"
-                           required/>
-                    <small id="username_invalid_helper" data-show="!!$errorUsername" data-text="$errorUsername"
-                           style="display: none;"></small>
-                </div>
-                <div>
-                    <label for="password">Password</label>
+            <div style="display: flex; flex-wrap: wrap; grid-gap: 1rem;">
+                <div style="flex: 1;">
+                    <label for="passphrase">Passphrase</label>
                     <div style="position: relative;">
-                        <input data-bind-password
-                               data-signals-_show-password="false"
-                               data-attr-type="$_showPassword ? 'text' : 'password'"
-                               data-attr-aria-invalid="!!$errorPassword ? 'true' : ($password.length > 0 ? 'false' : false)"
-                               aria-describedby="password_invalid_helper"
-                               id="password"
-                               name="password"
-                               autocomplete="password"
-                               placeholder="*****"
-                               required
+                        <input data-bind-passhphrase
+                               data-signals-_show-passphrase="false"
+                               id="passphrase"
+                               data-attr-type="$_showPassphrase ? 'text' : 'password'"
+                               name="passphrase"
+                               placeholder="Fill in passphrase if you want to protect your secret 🤺"
                                style="padding-right: 3rem;"/>
-                        <button data-on-click="@toggleAll({include: /^_showPassword$/})"
+                        <button data-on-click="@toggleAll({include: /^_showPassphrase$/})"
                                 style="background: none; border: none; position: absolute; right: 0;">
-                            <span data-show="$_showPassword" style="display: none;">
+                            <span data-show="$_showPassphrase" style="display: none;">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g
                                             fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"><path
                                                 d="M19.813 15.136a.341.341 0 0 0-.68.07c.5 5.31-2.305 7.537-5.56 7.756a9.58 9.58 0 0 1-6.149-1.837 4.82 4.82 0 0 1-2.116-3.404 8.36 8.36 0 0 1 1.347-5.8 6.35 6.35 0 0 1 5.251-2.485c4.842 0 6.34 1.996 6.719 3.743a.3.3 0 0 0 .589-.12 4.64 4.64 0 0 0-1.727-2.855c0-1.267 0-2.575-.11-3.843a27 27 0 0 0-.33-2.745A4.1 4.1 0 0 0 15.051.92a6.1 6.1 0 0 0-3.115-.909 4.38 4.38 0 0 0-4.692 3.993c-.07.63-.13 1.577-.17 2.656-.04 1.078-.05 2.336-.12 3.434a7.2 7.2 0 0 0-1.167 1.168A9.4 9.4 0 0 0 4.16 17.81a5.91 5.91 0 0 0 2.585 4.213 10.47 10.47 0 0 0 6.908 1.947c3.654-.37 6.868-2.875 6.16-8.835M7.883 6.69c.11-1.049.23-1.997.33-2.576a3.404 3.404 0 0 1 3.703-2.995 5.3 5.3 0 0 1 2.576.719 3.13 3.13 0 0 1 1.587 1.937q.348 1.632.51 3.294a47 47 0 0 1 .179 2.605 10.86 10.86 0 0 0-4.852-1.118 7.1 7.1 0 0 0-4.113.999c.08-1.019-.01-1.937.08-2.865"/><path
                                                 d="M12.845 17.552a2.4 2.4 0 0 1-.999.33.9.9 0 0 1-.798-.3.302.302 0 1 0-.48.369 1.52 1.52 0 0 0 .999.639 3 3 0 0 0 1.617-.22 2.28 2.28 0 0 0 1.438-1.587 2.88 2.88 0 0 0-.41-2.066 2 2 0 0 0-1.287-.889 3.17 3.17 0 0 0-1.997.27 1.997 1.997 0 0 0-.998 2.994.33.33 0 0 0 .449.17.35.35 0 0 0 .17-.45 1.24 1.24 0 0 1 .369-1.586 2.16 2.16 0 0 1 1.587-.32.94.94 0 0 1 .719.42c.25.373.365.82.33 1.267a1.36 1.36 0 0 1-.71.959"/></g></svg>
                             </span>
-                            <span data-show="!$_showPassword">
+                            <span data-show="!$_showPassphrase">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g
                                             fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"><path
                                                 d="M21.049 15.127a.34.34 0 0 0-.602-.173.35.35 0 0 0-.077.253c.499 5.311-2.307 7.538-5.561 7.758a9.6 9.6 0 0 1-6.16-1.838 4.87 4.87 0 0 1-2.118-3.404 8.42 8.42 0 0 1 1.348-5.811 6.39 6.39 0 0 1 5.252-2.486c4.853 0 6.35 1.997 6.73 3.744a.3.3 0 0 0 .359.23.29.29 0 0 0 .23-.35 4.6 4.6 0 0 0-1.728-2.845c0-1.279 0-2.586-.09-3.864a27 27 0 0 0-.319-2.746 4 4 0 0 0-1.448-2.317A6 6 0 0 0 13.171.01a4.283 4.283 0 0 0-4.573 3.994l-.15 2.087a.31.31 0 0 0 .28.33.3.3 0 0 0 .28-.28l.28-2.057a3.455 3.455 0 0 1 3.823-2.945 5.17 5.17 0 0 1 2.995.998c.58.394.996.987 1.169 1.667q.366 1.632.529 3.295c.09.869.15 1.738.2 2.606a10.9 10.9 0 0 0-4.853-1.158 7.3 7.3 0 0 0-6.14 2.706 9.37 9.37 0 0 0-1.638 6.55 5.89 5.89 0 0 0 2.636 4.223 10.46 10.46 0 0 0 6.87 1.947c3.664-.37 6.879-2.876 6.17-8.846"/><path
                                                 d="M14.08 17.553a2.4 2.4 0 0 1-.999.33.88.88 0 0 1-.788-.3.3.3 0 0 0-.42-.06.29.29 0 0 0-.06.42 1.5 1.5 0 0 0 .999.648 3.15 3.15 0 0 0 1.617-.23 2.3 2.3 0 0 0 1.438-1.587 2.9 2.9 0 0 0-.41-2.057 1.92 1.92 0 0 0-1.287-.888 3.1 3.1 0 0 0-1.997.27 1.997 1.997 0 0 0-.999 2.995.34.34 0 0 0 .32.2.34.34 0 0 0 .3-.48 1.28 1.28 0 0 1 .369-1.597 2.12 2.12 0 0 1 1.587-.31 1 1 0 0 1 .729.41c.256.374.37.827.32 1.277a1.35 1.35 0 0 1-.72.959M6.072 9.995q.159-.103.3-.23c.24-.2.43-.41.639-.609a.32.32 0 0 0 .13-.46.34.34 0 0 0-.46-.129 6 6 0 0 0-.868.28q-.181.06-.35.15a2 2 0 0 0-.3.219c-.229.2-.389.43-.618.659a.32.32 0 0 0-.11.42.31.31 0 0 0 .42.1q.446-.092.878-.24.178-.063.34-.16m-.62-5.991q.108.15.24.28.147.14.32.25.344.255.718.469a.34.34 0 0 0 .48 0 .36.36 0 0 0 0-.49c-.2-.26-.3-.509-.48-.738a3 3 0 0 0-.22-.28 3 3 0 0 0-.27-.24 7 7 0 0 0-.778-.419.3.3 0 1 0-.43.42c.16.269.25.519.42.748m.05 2.606a.34.34 0 0 0-.3-.38 3.4 3.4 0 0 0-.668-.299 1.6 1.6 0 0 0-.3-.07 1 1 0 0 0-.3 0c-1.058.07-1.058.28-1.078.37a.3.3 0 0 0 .25.35q.316.215.669.369.146.048.3.07h.309c.25 0 .47-.07.729-.11a.34.34 0 0 0 .39-.3"/></g></svg>
                             </span>
                         </button>
-                        <small id="password_invalid_helper" data-show="!!$errorPassword" data-text="$errorPassword"
-                               style="display: none;"></small>
                     </div>
                 </div>
-
-                <button data-on-click="$_submit"
-                        data-indicator-_fetching
-                        data-attr-disabled="$_hasErrors || $_fetching"
-                        data-attr-aria-busy="$_fetching ? 'true' : false"
-                        data-attr-aria-label="$_fetching ? 'Please wait…' : false"
-                        data-text="$_fetching ? 'Please wait...' : 'Log in'">
-                </button>
+                <div style="width: 12rem;">
+                    <label for="expiration">Expiration</label>
+                    <select data-bind-_expiration name="expiration" id="expiration">
+                        <option disabled value>Select expiration</option>
+                        {{range $k, $l := expirationRanges}}
+                            <option value="{{$k}}" {{if eq $k 3600}}selected{{end}}>{{$l}}</option>
+                        {{end}}
+                    </select>
+                </div>
+                <div style="width: 6rem;">
+                    <label for="maxViews">Max Views</label>
+                    <input data-bind-_max-views type="text" inputmode="numeric" name="maxViews" id="maxViews"
+                           value="1" min="1" required/>
+                </div>
             </div>
-        </article>
-    {{end}}
+
+            <button data-on-click="$_submit(el, true)"
+                    data-indicator-_fetching
+                    data-attr-disabled="$_hasErrors || $_fetching"
+                    data-attr-aria-busy="$_fetching ? 'true' : false"
+                    data-attr-aria-label="$_fetching ? 'Please wait…' : false"
+                    data-text="$_fetching ? 'Please wait...' : 'Create new secret'">
+            </button>
+        </div>
+    </article>
 {{end}}
