static assets, better UI experience and unified copy button

--- a/pkg/ui/templates/card_secret_form.gohtml
+++ b/pkg/ui/templates/card_secret_form.gohtml
@@ -12,9 +12,9 @@
         <header><h1>Keep your sensitive data out of prying 👀</h1></header>
         <div data-computed-_has-errors="!!$errorValue || $value.length === 0"
              data-computed-max-views="parseInt($_maxViews)"
-             data-computed-expiration="parseInt($_expiration)">
+             data-computed-expiration="parseInt($_expiration)"
+             style="display:grid; gap: 1rem;">
             <div>
-                {{/*                <label for="value">Secret</label>*/}}
                 <textarea data-bind-value name="value" id="value" required
                           aria-label="Secret"
                           placeholder="Fill in secret which you would like to share 🤫"
@@ -30,7 +30,7 @@
                 <div style="flex: 1;">
                     <label for="passphrase">Passphrase</label>
                     <div style="position: relative;">
-                        <input data-bind-passhphrase
+                        <input data-bind-passphrase
                                data-signals-_show-passphrase="false"
                                id="passphrase"
                                data-attr-type="$_showPassphrase ? 'text' : 'password'"
