--- a/pkg/ui/templates/page_secret.gohtml
+++ b/pkg/ui/templates/page_secret.gohtml
@@ -6,25 +6,35 @@
 {{define "content"}}
     <article id="secret-detail" style="max-width: 600px; margin-left: auto; margin-right: auto;">
         {{if .NotFound}}
-            <header><h4>No secret to be viewed.</h4></header>
+            <header><h1>No secret to be viewed.</h1></header>
             <div>
                 <p>Requested secret has been viewed or expired.</p>
                 {{/*                <a href="/">Create new secret</a>*/}}
             </div>
         {{else}}
-            <header><h4>Your secure message is ready.</h4></header>
+            <header><h1>Your secure message is ready.</h1></header>
             <div style="display: flex; flex-direction: column; grid-gap: 1rem;">
-                {{if .Password}}
+                {{if .Passphrase}}
                     <div>
-                        <label for="password">Password</label>
-                        <input type="password" name="password" id="password" data-bind-password
-                               placeholder="Enter password to decrypt your secret"/>
+                        <label for="passphrase">Passphrase</label>
+                        <input data-bind-passphrase
+                               data-attr-aria-invalid="!!$errorPassphrase ? 'true' : ($passphrase.length > 0 ? 'false' : false)"
+                               type="password"
+                               name="passphrase"
+                               id="passphrase"
+                               placeholder="Enter passphrase to decrypt your secret"
+                               aria-describedby="value_invalid_helper"/>
+                        <small id="passphrase_invalid_helper" data-show="!!$errorPassphrase"
+                               data-text="$errorPassphrase"
+                               style="display: none;"></small>
                     </div>
                     <button data-on-click="@post('{{.Url}}')"
-                            data-attr-disabled="$_hasErrors || $_fetching"
+                            data-indicator-_fetching
+                            data-attr-disabled="!$passphrase || $_fetching"
                             data-attr-aria-busy="$_fetching ? 'true' : false"
                             data-attr-aria-label="$_fetching ? 'Please wait…' : false"
-                            data-text="$_fetching ? 'Please wait...' : 'Decrypt'"></button>
+                            data-text="$_fetching ? 'Please wait...' : 'Decrypt'"
+                            type="button"></button>
                 {{else}}
                     {{if eq .ViewsLeft 1}}
                         <p>Careful: we will only show it once.</p>
@@ -40,6 +50,7 @@
                             data-attr-aria-busy="$_fetching ? 'true' : false"
                             data-attr-aria-label="$_fetching ? 'Please wait…' : false"
                             data-text="$_fetching ? 'Please wait...' : 'Click to reveal'"
+                            type="button"
                             style="display: block;"></button>
                 {{end}}
             </div>
