datastar v1.0.6RC, pico-blue, go1.25, greentaggc, jsonv2

--- a/pkg/ui/templates/card_secret_decrypted.gohtml
+++ b/pkg/ui/templates/card_secret_decrypted.gohtml
@@ -1,4 +1,4 @@
-{{- /*gotype: github.com/pudottapommin/secret-notes/pkg/ui.CardSecretDecrypted*/ -}}
+{{- /*gotype: github.com/pudottapommin/onetime-secrets-service/pkg/ui.CardSecretDecrypted*/ -}}
 {{define "card_secret_decrypted.html"}}
     <article id="secret-detail">
         <header><h1>Your secure message is shown below.</h1></header>
@@ -15,8 +15,8 @@
              style="display: flex; flex-direction: column; grid-gap: 1rem;">
             <textarea name="secret" id="secret" aria-label="Secret" readonly style="resize: none;"
                       rows="4">{{.Secret}}</textarea>
-            <button data-on-click="$_copy()"
-                    data-attr-disabled="$_copied"
+            <button data-on:click="$_copy()"
+                    data-attr:disabled="$_copied"
                     class="secondary" style="align-self: end;">
                 <span data-show="!$_copied">
                 Copy to clipboard
