--- a/pkg/ui/templates/card_secret_form.gohtml
+++ b/pkg/ui/templates/card_secret_form.gohtml
@@ -7,18 +7,18 @@
                 if(!direct && document.activeElement.tagName === 'TEXTAREA') return
                 @put('/')
              }}"
-             data-on-keydown="evt.key === 'Enter' && $_submit(el, false)"
+             data-on:keydown="evt.key === 'Enter' && $_submit(el, false)"
     >
         <header><h1>Keep your sensitive data out of prying 👀</h1></header>
-        <div data-computed-_has-errors="!!$errorValue || $value.length === 0"
-             data-computed-max-views="parseInt($_maxViews)"
-             data-computed-expiration="parseInt($_expiration)"
+        <div data-computed:_has-errors="!!$errorValue || $value.length === 0"
+             data-computed:max-views="parseInt($_maxViews)"
+             data-computed:expiration="parseInt($_expiration)"
              style="display:grid; gap: 1rem;">
             <div>
-                <textarea data-bind-value name="value" id="value" required
+                <textarea data-bind:value name="value" id="value" required
                           aria-label="Secret"
                           placeholder="Fill in secret which you would like to share 🤫"
-                          data-attr-aria-invalid="!!$errorValue ? 'true' : ($value.length > 0 ? 'false' : false)"
+                          data-attr:aria-invalid="!!$errorValue ? 'true' : ($value.length > 0 ? 'false' : false)"
                           aria-describedby="value_invalid_helper"
                           style="min-height: 10rem;max-height: 24rem;"
                 ></textarea>
@@ -30,14 +30,14 @@
                 <div style="flex: 1;">
                     <label for="passphrase">Passphrase</label>
                     <div style="position: relative;">
-                        <input data-bind-passphrase
-                               data-signals-_show-passphrase="false"
+                        <input data-bind:passphrase
+                               data-signals:_show-passphrase="false"
                                id="passphrase"
-                               data-attr-type="$_showPassphrase ? 'text' : 'password'"
+                               data-attr:type="$_showPassphrase ? 'text' : 'password'"
                                name="passphrase"
                                placeholder="Fill in passphrase if you want to protect your secret 🤺"
                                style="padding-right: 3rem;"/>
-                        <button data-on-click="@toggleAll({include: /^_showPassphrase$/})"
+                        <button data-on:click="@toggleAll({include: /^_showPassphrase$/})"
                                 style="background: none; border: none; position: absolute; right: 0;">
                             <span data-show="$_showPassphrase" style="display: none;">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g
@@ -56,7 +56,7 @@
                 </div>
                 <div style="width: 12rem;">
                     <label for="expiration">Expiration</label>
-                    <select data-bind-_expiration name="expiration" id="expiration">
+                    <select data-bind:_expiration name="expiration" id="expiration">
                         <option disabled value>Select expiration</option>
                         {{range $k, $l := expirationRanges}}
                             <option value="{{$k}}" {{if eq $k 3600}}selected{{end}}>{{$l}}</option>
@@ -65,16 +65,16 @@
                 </div>
                 <div style="width: 6rem;">
                     <label for="maxViews">Max Views</label>
-                    <input data-bind-_max-views type="text" inputmode="numeric" name="maxViews" id="maxViews"
+                    <input data-bind:_max-views type="text" inputmode="numeric" name="maxViews" id="maxViews"
                            value="1" min="1" required/>
                 </div>
             </div>
 
-            <button data-on-click="$_submit(el, true)"
-                    data-indicator-_fetching
-                    data-attr-disabled="$_hasErrors || $_fetching"
-                    data-attr-aria-busy="$_fetching ? 'true' : false"
-                    data-attr-aria-label="$_fetching ? 'Please wait…' : false"
+            <button data-on:click="$_submit(el, true)"
+                    data-indicator:_fetching
+                    data-attr:disabled="$_hasErrors || $_fetching"
+                    data-attr:aria-busy="$_fetching ? 'true' : false"
+                    data-attr:aria-label="$_fetching ? 'Please wait…' : false"
                     data-text="$_fetching ? 'Please wait...' : 'Create new secret'">
             </button>
         </div>
