--- a/pkg/ui/templates/page_secret.gohtml
+++ b/pkg/ui/templates/page_secret.gohtml
@@ -1,4 +1,4 @@
-{{- /*gotype: github.com/pudottapommin/secret-notes/pkg/ui.PageSecret*/ -}}
+{{- /*gotype: github.com/pudottapommin/onetime-secrets-service/pkg/ui.PageSecret*/ -}}
 {{define "page_secret.html"}}
     {{template "layout.html" .}}
 {{end}}
@@ -17,8 +17,8 @@
                 {{if .Passphrase}}
                     <div>
                         <label for="passphrase">Passphrase</label>
-                        <input data-bind-passphrase
-                               data-attr-aria-invalid="!!$errorPassphrase ? 'true' : ($passphrase.length > 0 ? 'false' : false)"
+                        <input data-bind:passphrase
+                               data-attr:aria-invalid="!!$errorPassphrase ? 'true' : ($passphrase.length > 0 ? 'false' : false)"
                                type="password"
                                name="passphrase"
                                id="passphrase"
@@ -28,11 +28,11 @@
                                data-text="$errorPassphrase"
                                style="display: none;"></small>
                     </div>
-                    <button data-on-click="@post('{{.Url}}')"
-                            data-indicator-_fetching
-                            data-attr-disabled="!$passphrase || $_fetching"
-                            data-attr-aria-busy="$_fetching ? 'true' : false"
-                            data-attr-aria-label="$_fetching ? 'Please wait…' : false"
+                    <button data-on:click="@post('{{.Url}}')"
+                            data-indicator:_fetching
+                            data-attr:disabled="!$passphrase || $_fetching"
+                            data-attr:aria-busy="$_fetching ? 'true' : false"
+                            data-attr:aria-label="$_fetching ? 'Please wait…' : false"
                             data-text="$_fetching ? 'Please wait...' : 'Decrypt'"
                             type="button"></button>
                 {{else}}
@@ -44,11 +44,11 @@
                             times
                         </p>
                     {{end}}
-                    <button data-on-click="@post('{{.Url}}')"
-                            data-indicator-_fetching
-                            data-attr-disabled="$_hasErrors || $_fetching"
-                            data-attr-aria-busy="$_fetching ? 'true' : false"
-                            data-attr-aria-label="$_fetching ? 'Please wait…' : false"
+                    <button data-on:click="@post('{{.Url}}')"
+                            data-indicator:_fetching
+                            data-attr:disabled="$_hasErrors || $_fetching"
+                            data-attr:aria-busy="$_fetching ? 'true' : false"
+                            data-attr:aria-label="$_fetching ? 'Please wait…' : false"
                             data-text="$_fetching ? 'Please wait...' : 'Click to reveal'"
                             type="button"
                             style="display: block;"></button>
